# CortexLink

./: .gitignore  CMakeLists.txt  openclaw_skill.md
cmake/: rk3588_toolchain.cmake
devices/cron/: README.md  cron_device.py  cron_parser.py  main.py  start_cron.sh
devices/speaker/: README.md  audio_player.py  azure_tts.py  config.json  main.py  requirements.txt  speaker_device.py
doc/: README.md  device-onboarding.md
docs/: app_dev_guide.md  cron.md  error-codes.md  joint_debugging_checklist.md  mqtt-protocol.md
include/: main.h
include/app/: app_manager.h  app_sql_proxy.h  sql_strategy.h
include/cron/: cron_parser.h  cron_scheduler.h
include/db/: db_table.h  device_data_table.h  device_property_table.h  event_record_table.h  event_rule_table.h  event_table.h  rule_table.h  user_profile_table.h
include/device/: device_manager.h  device_resp_code.h
include/llm/: llm_sql_proxy.h  llm_sql_strategy.h  open_claw_client.h
include/lua/: lua_sandbox.h
include/mqtt/: mqtt_client.h
include/rule_engine/: cond_parser.h  rule_engine.h
include/util/: log_util.h  sql_util.h  time_util.h  uuid_util.h
src/: main.cpp
src/app/: app_manager.cpp  app_sql_proxy.cpp  sql_strategy.cpp
src/cron/: cron_parser.cpp  cron_scheduler.cpp
src/db/: db_table.cpp  device_data_table.cpp  device_property_table.cpp  event_record_table.cpp  event_rule_table.cpp  event_table.cpp  rule_table.cpp  user_profile_table.cpp
src/device/: device_manager.cpp
src/llm/: llm_sql_proxy.cpp  llm_sql_strategy.cpp  open_claw_client.cpp
src/lua/: lua_sandbox.cpp
src/mqtt/: mqtt_client.cpp
src/rule_engine/: cond_parser.cpp  rule_engine.cpp
src/util/: log_util.cpp  sql_util.cpp  time_util.cpp  uuid_util.cpp
test/: llm_test.cpp  openclaw_connectivity_test.cpp  rule_engine_test.cpp
